install Ingress controller/test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: test.nissisoluciones.com
    http:
      paths:
      - path: /test70
        pathType: Prefix
        backend:
          service:
            name: app-v1
            port:
      - path: /test200
        pathType: Prefix
        backend:
          service:
            name: app-v2
            port:
             name: http
